--- a/stephportfolio.css
+++ b/stephportfolio.css
@@ -167,6 +167,28 @@
     color: var(--main-pink);
   }
 
+.education {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 20vh;
+    background-color: #000;
+    background-image: linear-gradient(62deg, #3a3d40 0%, #181719 100%);
+}
+
+.education-list {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    font-size: 3rem;
+    font-weight: 200;
+    font-style: italic;
+    color: var(--main-pink)
+}
+
   .skill-list {
       display: flex;
       flex-direction: column;
@@ -184,7 +206,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 50vh;
+    height: 30vh;
     background-color: #000;
     background-image: linear-gradient(62deg, #3a3d40 0%, #181719 100%);
   }
