--- a/stephportfolio.css
+++ b/stephportfolio.css
@@ -4,6 +4,7 @@
     --main-blue: #45567d;
     --main-gray: #303841;
   }
+ 
   
   /* Base reset */
   * {
@@ -20,49 +21,8 @@
   
   html {
     box-sizing: border-box;
-  
-    /* Set font size for easy rem calculations
-     * default document font size = 16px, 1rem = 16px, 100% = 16px
-     * (100% / 16px) * 10 = 62.5%, 1rem = 10px, 62.5% = 10px
-    */
     font-size: 62.5%;
     scroll-behavior: smooth;
-  }
-  
-  /* A few media query to set some font sizes at different screen sizes.
-   * This helps automate a bit of responsiveness.
-   * The trick is to use the rem unit for size values, margin and padding.
-   * Because rem is relative to the document font size
-   * when we scale up or down the font size on the document
-   * it will affect all properties using rem units for the values.
-  */
-  
-  /* I am using the em unit for breakpoints
-   * The calculation is the following
-   * screen size divided by browser base font size
-   * As an example: a breakpoint at 980px
-   * 980px / 16px = 61.25em
-  */
-  
-  /* 1200px / 16px = 75em */
-  @media (max-width: 75em) {
-    html {
-      font-size: 60%;
-    }
-  }
-  
-  /* 980px / 16px = 61.25em */
-  @media (max-width: 61.25em) {
-    html {
-      font-size: 58%;
-    }
-  }
-  
-  /* 460px / 16px = 28.75em */
-  @media (max-width: 28.75em) {
-    html {
-      font-size: 55%;
-    }
   }
   
   /* Base styles */
@@ -104,7 +64,7 @@
     width: 100%;
   }
   
-  /* nav */
+  /* navigation menu */
   
   .nav {
     display: flex;
@@ -143,80 +103,8 @@
     background: var(--main-blue);
   }
 
-  /* About me section*/
-
-  .about {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 50vh;
-    background-color: #000;
-    background-image: linear-gradient(62deg, #3a3d40 0%, #181719 100%);
-  }
-  
-  .info {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-    font-size: 3rem;
-    font-weight: 200;
-    font-style: italic;
-    color: var(--main-pink);
-  }
-
-.education {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 20vh;
-    background-color: #000;
-    background-image: linear-gradient(62deg, #3a3d40 0%, #181719 100%);
-}
-
-.education-list {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-    font-size: 3rem;
-    font-weight: 200;
-    font-style: italic;
-    color: var(--main-pink)
-}
-
-  .skill-list {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      text-align: center;
-      font-size: 3rem;
-      font-weight: 200;
-      font-style: italic;
-      color: var(--main-pink)
-  }
-
-  .skill-set {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 30vh;
-    background-color: #000;
-    background-image: linear-gradient(62deg, #3a3d40 0%, #181719 100%);
-  }
-  
+ 
   /* Welcome section */
-  .steph-image {
-      width: 400px;
-      height: 400px;
-      justify-content: center;
-  }
 
   .welcome-section {
     display: flex;
@@ -225,179 +113,200 @@
     align-items: center;
     width: 100%;
     height: 100vh;
-    background-color: #000;
-    background-image: linear-gradient(62deg, #3a3d40 0%, #181719 100%);
+    background-image: url("Background.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  .welcome-section > h1 {
+    font-family: 'Pacifico', cursive;
+    font-size: 8rem;
   }
   
   .welcome-section > p {
     font-size: 3rem;
     font-weight: 200;
     font-style: italic;
-    color: var(--main-pink);
+    color: var(--main-white);
   }
   
-  /* Projects section */
+   /* About me section*/
+   .profile-pic {
+    display: block;
+    margin: 0 auto;
+    height: 200px;
+    width: 200px;
+  }
   
-  .projects-section {
+   .about {
+    display: flex;
+    flex-direction: column;
     text-align: center;
-    padding: 10rem 2rem;
+    margin-top: 70px;
+    width: 100%;
+    height: 105vh;
+    font-size: 3rem;
     background: var(--main-blue);
   }
-  
-  .projects-section-header {
-    max-width: 640px;
-    margin: 0 auto 6rem auto;
-    border-bottom: 0.2rem solid var(--main-white);
+
+  .about > h2 {
+    font-family: 'Pacifico', cursive;
   }
   
-  @media (max-width: 28.75em) {
-    .projects-section-header {
-      font-size: 4rem;
-    }
-  }
-  
-  /* "Automagic" image grid using no media queries */
-  .projects-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-    grid-gap: 4rem;
-    width: 100%;
-    max-width: 1280px;
-    margin: 0 auto;
-    margin-bottom: 6rem;
-  }
-  
-  @media (max-width: 30.625em) {
-    .projects-section {
-      padding: 6rem 1rem;
-    }
-  
-    .projects-grid {
-      grid-template-columns: 1fr;
-    }
-  }
-  
-  .project {
-    background: var(--main-gray);
-    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-    border-radius: 2px;
-  }
-  
-  .code {
+  .info {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+    font-weight: 200;
+    font-style: italic;
     color: var(--main-white);
-    transition: color 0.3s ease-out;
+    
   }
+
+.education-list {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    font-weight: 200;
+    font-style: italic;
+    color: var(--main-white);
+    
+}
+
+.education {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 20vh;
   
-  .project:hover .code {
-    color: #ff7f50;
+}
+.skill-list {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      text-align: center;
+      font-size: 3rem;
+      font-weight: 200;
+      font-style: italic;
+      color: var(--main-white);
   }
-  
-  .project-image {
-    height: calc(100% - 6.8rem);
-    width: 100%;
-    object-fit: cover;
-  }
-  
-  .project-title {
-    font-size: 2rem;
-    padding: 2rem 0.5rem;
-  }
-  
-  .btn {
-    display: inline-block;
-    padding: 1rem 2rem;
-    border-radius: 2px;
-  }
-  
-  .btn-show-all {
-    font-size: 2rem;
-    background: var(--main-gray);
-    transition: background 0.3s ease-out;
-  }
-  
-  .btn-show-all:hover {
-    background: var(--main-white);
-  }
-  
-  .btn-show-all:hover > i {
-    transform: translateX(2px);
-  }
-  
-  .btn-show-all > i {
-    margin-left: 10px;
-    transform: translateX(0);
-    transition: transform 0.3s ease-out;
-  }
-  
-  /* Contact section */
-  
-  .contact-section {
+
+  .skill-set {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    text-align: center;
-    width: 320%;
-    height: 40vh;
-    padding: 0 2rem;
-    background: var(--main-gray);
-  }
-  
-  .contact-section-header > h2 {
-    font-size: 6rem;
-  }
-  
-  @media (max-width: 28.75em) {
-    .contact-section-header > h2 {
-      font-size: 4rem;
-    }
-  }
-  
-  .contact-section-header > p {
-    font-style: italic;
-  }
-  
-  .contact-links {
-    display: flex;
-    justify-content: center;
     width: 100%;
-    max-width: 980px;
-    margin-top: 4rem;
-    flex-wrap: wrap;
+    height: 25vh; 
+    
   }
-  
-  .contact-details {
-    font-size: 2.4rem;
-    text-shadow: 2px 2px 1px #1f1f1f;
-    transition: transform 0.3s ease-out;
-  }
-  
-  .contact-details:hover {
-    transform: translateY(8px);
-  }
-  
-  /* Footer */
-  
-  footer {
-    font-weight: 300;
+  .resume {
     display: flex;
-    justify-content: space-evenly;
-    padding: 2rem;
-    background: var(--main-pink);
-    border-top: 4px solid var(--main-pink);
-  }
-  
-  footer > p {
-    margin: 2rem;
-  }
-  
-  footer i {
-    vertical-align: middle;
-  }
-  
-  @media (max-width: 28.75em) {
-    footer {
-      flex-direction: column;
-      text-align: center;
-    }
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    font-size: 3rem;
+    font-weight: 200;
+    font-style: bold;
+}
+
+  /* Contact Me */
+  .contact-section{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    font-size: 3rem;
+    background-image: url("Background.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.contact-links {
+    display: inline-block;
+    padding: 100px;
+    border-radius: 5px;
+    font-size: 3rem;
+    font-weight: 200;
+    font-style: italic;
+    color: var(--main-pink);
+    background: var(--main-blue);
+}
+
+.contact-section-header {
+  background: var(--main-blue);
+  padding: 10px 105px 10px 105px;
+}
+
+.contact-section-header > h2 {
+  font-family: 'Pacifico', cursive;
+  font-size: 6rem;
+}
+
+.facebook {
+  display: inline-block;
+  height: 100px;
+  width: 100px;
+  justify-content: flex-start;
+  text-align: center;
+}
+
+.github {
+  display: inline-block;
+  height: 100px;
+  width: 100px;
+  justify-content: center;
+  text-align: center;
+}
+
+.twitter {
+  display: inline-block;
+  height: 100px;
+  width: 100px;
+  justify-content: center;
+  text-align: center;
+}
+
+.email {
+  display: inline-block;
+  height: 100px;
+  width: 100px;
+  justify-content: flex-end;
+  text-align: center;
+}
+
+/* Blog Section */
+
+.blog-section-header {
+  display: flex;
+  justify-content: center;
+  font-family: 'Pacifico', cursive;
+  margin-top: 70px;
+}
+.blog-section {
+  background-image: url("Background.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 200vh;
+}
+
+.blog-grid {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-content: space-between;
+}
+
+.blog-tile {
+  display: inline-block;
+  margin-top: 50px;
+  width: 300px;
+  height: 300px;
+  text-align: center;
   }
