--- a/stephportfolio.css
+++ b/stephportfolio.css
@@ -151,6 +151,7 @@
   }
 
   .about > h2 {
+    margin-top: 70px;
     font-family: 'Pacifico', cursive;
   }
   
@@ -164,7 +165,6 @@
     max-width: 100%;
     height: auto;
     color: var(--main-white);
-    
   }
 
 .education-list {
@@ -340,4 +340,47 @@
   width: 300px;
   height: 300px;
   text-align: center;
+  }
+
+  /* Blog Posts Page */
+
+  .blog-content > h2 {
+    display: flex;
+    justify-content: center;
+    font-family: 'Pacifico', cursive;
+    margin-top: 70px;
+  }
+
+  .blog-content {
+    background: var(--main-blue);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+  }
+  
+  .blog-post {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+    font-weight: 200;
+    font-style: italic;
+    max-width: 100%;
+    height: auto;
+    color: var(--main-white);
+  }
+
+  .blog-post > h2 {
+    display: flex;
+    justify-content: center;
+    font-family: 'Pacifico', cursive;
+    margin-top: 100px;
+  }
+
+  .blog-post > p {
+    display: flex;
+    justify-content: center;
+    font-size: 3rem;
+    font-weight: 200;
+    font-style: italic;
+    margin: 30px;
   }
