--- a/stephportfolio.css
+++ b/stephportfolio.css
@@ -73,7 +73,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    background: var(--main-gray);
+    background: var(--main-white);
     box-shadow: 0 2px 0 rgba(0, 0, 0, 0.4);
     z-index: 10;
   }
@@ -113,7 +113,7 @@
     align-items: center;
     width: 100%;
     height: 100vh;
-    background-image: url("Background2.png");
+    background-image: url("Background3.png");
     background-repeat: no-repeat;
     background-size: cover;
   }
@@ -244,7 +244,7 @@
     width: 100%;
     height: 100vh;
     font-size: 3rem;
-    background-image: url("Background2.png");
+    background-image: url("Background3.png");
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -319,7 +319,7 @@
   margin-top: 70px;
 }
 .blog-section {
-  background-image: url("Background2.png");
+  background-image: url("Background3.png");
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
