--- a/stephportfolio.css
+++ b/stephportfolio.css
@@ -244,6 +244,7 @@
     width: 100%;
     height: 100vh;
     font-size: 3rem;
+    max-width: 100%;
     background-image: url("Background.png");
     background-repeat: no-repeat;
     background-size: cover;
@@ -256,6 +257,7 @@
     font-size: 3rem;
     font-weight: 200;
     font-style: italic;
+    max-width: 100%;
     color: var(--main-pink);
     background: var(--main-blue);
 }
