--- a/stephportfolio.css
+++ b/stephportfolio.css
@@ -250,6 +250,10 @@
     background-size: cover;
 }
 
+.contact-section-header {
+  margin-top: auto;
+}
+
 .contact-links {
     display: inline-block;
     padding: 100px;
